New KL Divergence Module and Histogram Comparison

--- a/01_Data_Gathering.ipynb
+++ b/01_Data_Gathering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Some Control Variables\n",
     "\n",
-    "DOWNLOAD_PWC_DATA = False # If set to true, the PWC data will be downloaded. If files are already there, they will be deleted and downloaded again.\n",
+    "DOWNLOAD_PWC_DATA = True # If set to true, the PWC data will be downloaded. If files are already there, they will be deleted and downloaded again.\n",
     "\n",
     "PWC_DATA_PATH = \"data/pwc/\" # If this is set to none, the JSON files will be downloaded to the data directory\n",
     "PWC_API_PATH = \"data/pwc_api/\" # If this is set to none, the JSON files will be downloaded to the data directory\n",
@@ -51,14 +51,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not downloading JSON files from PapersWithCode\n"
+      "Downloading JSON files from PapersWithCode\n",
+      "Deleting old papers.json\n",
+      "Deleting old methods.json\n",
+      "Deleting old repos.json\n",
+      "Deleting old evaluation_tables.json\n",
+      "Deleting old datasets.json\n",
+      "Downloaded papers.json.gz. Size is 346.79 MB\n",
+      "Unzipped papers.json.gz. Size is 1351.98 MB\n",
+      "\n",
+      "Downloaded methods.json.gz. Size is 0.75 MB\n",
+      "Unzipped methods.json.gz. Size is 3.17 MB\n",
+      "\n",
+      "Downloaded repos.json.gz. Size is 18.49 MB\n",
+      "Unzipped repos.json.gz. Size is 115.1 MB\n",
+      "\n",
+      "Downloaded evaluation_tables.json.gz. Size is 14.09 MB\n",
+      "Unzipped evaluation_tables.json.gz. Size is 170.51 MB\n",
+      "\n",
+      "Downloaded datasets.json.gz. Size is 3.05 MB\n",
+      "Unzipped datasets.json.gz. Size is 13.98 MB\n",
+      "\n",
+      "Downloaded JSON files from PapersWithCode and saved them to data/pwc\n"
      ]
     }
    ],
@@ -185,14 +206,374 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Not downloading areas and tasks from PapersWithCode\n"
+      "Getting all areas...\n",
+      "Done.\n",
+      "Getting all tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bec24565755341a896c25523825b09c6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/16 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area adversarial. Got 21 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8664103285724563bfca592ff8fbd61a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area audio. Got 67 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2d5b858d0b84474eaa84b3f71d0eb7eb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area computer-code. Got 59 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e404bba7d0d149f48fb5f7c7cdc6f013",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area computer-vision. Got 1308 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a6521584594140ac8af80078538326f1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/14 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area graphs. Got 84 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a6d7c8b3e8474a01af46e85f7d4f8f73",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area knowledge-base. Got 33 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8638064ad5564f0eb367a9182cbfa5c9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area medical. Got 252 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e4a4b178d1f94ae5b46444b4ef035e0e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area methodology. Got 178 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4f4d6b9a36d040e68636911bee59212f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area miscellaneous. Got 246 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "56f4fcb82bbf40b7984a449cbeccb427",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area music. Got 24 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cdb659b1cfa740d09365b1d13c6ddc88",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area natural-language-processing. Got 634 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c033f780b1504b26968f56997d9dc71f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area playing-games. Got 42 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1dd86068cc954fafb70227b0b519f23d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area reasoning. Got 64 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c4297397225946f8a4afb973f0ca0629",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area robots. Got 43 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "49d88b35d69f4184ab1fe11f821ca8f5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area speech. Got 78 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c7c60a786334e8488d9db4fc3db6003",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting tasks from area time-series. Got 92 tasks...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c15a01b6aa524fbdacfe06dea0f3f11f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n",
+      "Saved 16 areas with corresponding tasks to data/pwc_api/areas.json.\n"
      ]
     }
    ],
@@ -247,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +638,7 @@
       "Loading JSON files into dataframes...\n",
       "Loaded JSON files into dataframes\n",
       "\n",
-      "Got 411124 papers, 2158 methods, 212813 repos, 8834 datasets and 16 areas.\n",
+      "Got 414518 papers, 2165 methods, 213993 repos, 8890 datasets and 16 areas.\n",
       "Checking for duplicates in papers_df...\n",
       "Found 0 duplicates.\n"
      ]
@@ -284,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,17 +674,17 @@
      "text": [
       "Preprocessing dataframes...\n",
       "\n",
-      "[NODES] Got 411124 rows in papers_df\n",
-      "[NODES] Got 2158 rows in methods_df\n",
-      "[NODES] Got 212813 rows in repos_df\n",
+      "[NODES] Got 414518 rows in papers_df\n",
+      "[NODES] Got 2165 rows in methods_df\n",
+      "[NODES] Got 213993 rows in repos_df\n",
       "[NODES] Got 16 rows in areas_df\n",
-      "[NODES] Got 3216 rows in tasks_df\n",
-      "[NODES] Got 8834 rows in datasets_df\n",
-      "[EDGES] Got 15517 rows in datasets_tasks_df\n",
-      "[EDGES] Got 680984 rows in papers_tasks_df\n",
-      "[EDGES] Got 437861 rows in papers_methods_df\n",
-      "[EDGES] Got 212813 rows in papers_repos_df\n",
-      "[EDGES] Got 3216 rows in tasks_areas_df\n",
+      "[NODES] Got 3225 rows in tasks_df\n",
+      "[NODES] Got 8890 rows in datasets_df\n",
+      "[EDGES] Got 15478 rows in datasets_tasks_df\n",
+      "[EDGES] Got 685843 rows in papers_tasks_df\n",
+      "[EDGES] Got 441982 rows in papers_methods_df\n",
+      "[EDGES] Got 213993 rows in papers_repos_df\n",
+      "[EDGES] Got 3225 rows in tasks_areas_df\n",
       "\n",
       "Done preprocessing dataframes!\n"
      ]
@@ -389,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
