--- a/02_Database_Generation.ipynb
+++ b/02_Database_Generation.ipynb
@@ -26,7 +26,6 @@
    "outputs": [],
    "source": [
     "# Some Control Variables\n",
-    "\n",
     "PWC_PROCESSED_JSON_PATH = \"data/pwc_processed_json/\"\n",
     "NEO4J_PATH = \"data/neo4j/\"\n",
     "NEO4J_DB_NAME = \"neo4j\"\n",
@@ -48,13 +47,14 @@
      "output_type": "stream",
      "text": [
       "Creating edges between papers and keywords...\n",
-      "[EDGES] Got 4429807 rows in papers_keywords_df\n"
+      "[EDGES] Got 1878071 rows in papers_keywords_df\n",
+      "Saving papers_df...\n",
+      "Done and deleted papers_df\n"
      ]
     }
    ],
    "source": [
     "# First compute everything for the papers_df, because it is too large to fit in memory with the other dataframes...\n",
-    "\n",
     "papers_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'papers_processed.json', dtype={\"id\": str}, encoding=\"utf-8\")\n",
     "paper_keywords = [keyword[0] for row in papers_df[\"abstract_keywords\"] if row is not None for keyword in row if keyword]\n",
     "\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -126,15 +126,15 @@
      "output_type": "stream",
      "text": [
       "Grabbing all keywords from all dataframes...\n",
-      "Got 4521885 keywords from all dataframes!\n",
-      "Got 908211 unique keywords from all dataframes (Around 20.084787649398425%).\n",
-      "[NODES] Got 908211 rows in keywords_df\n",
+      "Got 1924086 keywords from all dataframes!\n",
+      "Got 916319 unique keywords from all dataframes (Around 47.6235989451615%).\n",
+      "[NODES] Got 916319 rows in keywords_df\n",
       "Creating edges between methods and keywords...\n",
-      "[EDGES] Got 16077 rows in methods_keywords_df\n",
+      "[EDGES] Got 7952 rows in methods_keywords_df\n",
       "Creating edges between datasets and keywords...\n",
-      "[EDGES] Got 67027 rows in datasets_keywords_df\n",
+      "[EDGES] Got 32449 rows in datasets_keywords_df\n",
       "Creating edges between tasks and keywords...\n",
-      "[EDGES] Got 8974 rows in tasks_keywords_df\n",
+      "[EDGES] Got 5614 rows in tasks_keywords_df\n",
       "Saving keywords and the papers_keywords_df to PWC_PROCESSED_JSON_PATH...\n",
       "Saved keywords and the papers_keywords_df to PWC_PROCESSED_JSON_PATH!\n"
      ]
@@ -209,7 +209,7 @@
     "\n",
     "# Create edges between tasks and keywords\n",
     "print(\"Creating edges between tasks and keywords...\")\n",
-    "tasks_keywords_df = (tasks_df[['id', 'description_keywords']]\n",
+    "tasks_keywords_df = (tasks_df[['id_md5', 'description_keywords']]\n",
     "                        .rename(columns={'description_keywords': 'keywords'})\n",
     "                      .explode('keywords')\n",
     "                      .dropna()\n",
@@ -217,7 +217,7 @@
     "                      .drop(columns=['keywords'])\n",
     "                      .assign(keyword_id=lambda df: (\"keyword/\" + df['keyword']).apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16))))\n",
     "                      .drop(columns=['keyword'])\n",
-    "                      .rename(columns={'id': 'task_id'})\n",
+    "                      .rename(columns={'id_md5': 'task_id'})\n",
     "                      .reindex(columns=['task_id', 'keyword_id', 'score'])\n",
     "                      .reset_index(drop=True))\n",
     "print(f\"[EDGES] Got {len(tasks_keywords_df)} rows in tasks_keywords_df\")\n",
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -254,12 +254,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b88753334ad24896a0f5f128c6792567",
+       "model_id": "375d639655de4fdfa619587c7e72f8f7",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Batches:   0%|          | 0/28382 [00:00<?, ?it/s]"
+       "Batches:   0%|          | 0/28635 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
