--- a/02_Database_Generation.ipynb
+++ b/02_Database_Generation.ipynb
@@ -46,8 +46,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating edges between papers and keywords...\n",
-      "[EDGES] Got 1878071 rows in papers_keywords_df\n",
+      "Creating edges between papers and abstract keywords...\n",
+      "[EDGES] Got 3045277 rows in papers_abstract_keywords_df\n",
+      "Creating edges between papers and title keywords...\n",
+      "[EDGES] Got 1284495 rows in papers_title_keywords_df\n",
       "Saving papers_df...\n",
       "Done and deleted papers_df\n"
      ]
@@ -57,21 +59,37 @@
     "# First compute everything for the papers_df, because it is too large to fit in memory with the other dataframes...\n",
     "papers_df = pd.read_json(PWC_PROCESSED_JSON_PATH + 'papers_processed.json', dtype={\"id\": str}, encoding=\"utf-8\")\n",
     "paper_keywords = [keyword[0] for row in papers_df[\"abstract_keywords\"] if row is not None for keyword in row if keyword]\n",
+    "# Append all keywords from the title_keywords column\n",
+    "paper_keywords += [keyword[0] for row in papers_df[\"title_keywords\"] if row is not None for keyword in row if keyword]\n",
     "\n",
     "# Create edges between papers and keywords\n",
-    "print(\"Creating edges between papers and keywords...\")\n",
-    "papers_keywords_df = (papers_df[['id', 'abstract_keywords']]\n",
-    "                      .rename(columns={'abstract_keywords': 'keywords'})\n",
-    "                      .explode('keywords')\n",
-    "                      .dropna()\n",
-    "                      .assign(keyword=lambda df: df['keywords'].str[0], score=lambda df: df['keywords'].str[1])\n",
-    "                      .drop(columns=['keywords'])\n",
-    "                      .assign(keyword_id=lambda df: (\"keyword/\" + df['keyword']).apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16))))\n",
-    "                      .drop(columns=['keyword'])\n",
-    "                      .rename(columns={'id': 'paper_id'})\n",
-    "                      .reindex(columns=['paper_id', 'keyword_id', 'score'])\n",
-    "                      .reset_index(drop=True))\n",
-    "print(f\"[EDGES] Got {len(papers_keywords_df)} rows in papers_keywords_df\")\n",
+    "print(\"Creating edges between papers and abstract keywords...\")\n",
+    "papers_abstract_keywords_df = (papers_df[['id', 'abstract_keywords']]\n",
+    "                                .rename(columns={'abstract_keywords': 'keywords'})\n",
+    "                                .explode('keywords')\n",
+    "                                .dropna()\n",
+    "                                .assign(keyword=lambda df: df['keywords'].str[0], score=lambda df: df['keywords'].str[1])\n",
+    "                                .drop(columns=['keywords'])\n",
+    "                                .assign(keyword_id=lambda df: (\"keyword/\" + df['keyword']).apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16))))\n",
+    "                                .drop(columns=['keyword'])\n",
+    "                                .rename(columns={'id': 'paper_id'})\n",
+    "                                .reindex(columns=['paper_id', 'keyword_id', 'score'])\n",
+    "                                .reset_index(drop=True))\n",
+    "print(f\"[EDGES] Got {len(papers_abstract_keywords_df)} rows in papers_abstract_keywords_df\")\n",
+    "\n",
+    "print(\"Creating edges between papers and title keywords...\")\n",
+    "papers_title_keywords_df = (papers_df[['id', 'title_keywords']]\n",
+    "                                .rename(columns={'title_keywords': 'keywords'})\n",
+    "                                .explode('keywords')\n",
+    "                                .dropna()\n",
+    "                                .assign(keyword=lambda df: df['keywords'].str[0], score=lambda df: df['keywords'].str[1])\n",
+    "                                .drop(columns=['keywords'])\n",
+    "                                .assign(keyword_id=lambda df: (\"keyword/\" + df['keyword']).apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16))))\n",
+    "                                .drop(columns=['keyword'])\n",
+    "                                .rename(columns={'id': 'paper_id'})\n",
+    "                                .reindex(columns=['paper_id', 'keyword_id', 'score'])\n",
+    "                                .reset_index(drop=True))\n",
+    "print(f\"[EDGES] Got {len(papers_title_keywords_df)} rows in papers_title_keywords_df\")\n",
     "\n",
     "# papers_df\n",
     "papers_df = papers_df.rename(columns={\"id\": \"id:ID\"})\n",
@@ -88,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,15 +144,15 @@
      "output_type": "stream",
      "text": [
       "Grabbing all keywords from all dataframes...\n",
-      "Got 1924086 keywords from all dataframes!\n",
-      "Got 916319 unique keywords from all dataframes (Around 47.6235989451615%).\n",
-      "[NODES] Got 916319 rows in keywords_df\n",
+      "Got 4395001 keywords from all dataframes!\n",
+      "Got 971414 unique keywords from all dataframes (Around 22.10270259324173%).\n",
+      "[NODES] Got 971414 rows in keywords_df\n",
       "Creating edges between methods and keywords...\n",
-      "[EDGES] Got 7952 rows in methods_keywords_df\n",
+      "[EDGES] Got 11125 rows in methods_keywords_df\n",
       "Creating edges between datasets and keywords...\n",
-      "[EDGES] Got 32449 rows in datasets_keywords_df\n",
+      "[EDGES] Got 47412 rows in datasets_keywords_df\n",
       "Creating edges between tasks and keywords...\n",
-      "[EDGES] Got 5614 rows in tasks_keywords_df\n",
+      "[EDGES] Got 6692 rows in tasks_keywords_df\n",
       "Saving keywords and the papers_keywords_df to PWC_PROCESSED_JSON_PATH...\n",
       "Saved keywords and the papers_keywords_df to PWC_PROCESSED_JSON_PATH!\n"
      ]
@@ -143,7 +161,6 @@
    "source": [
     "# Grab all keywords from all dataframes and put them into a list. Remember that the keyword column in each dataframe is a list of dicts with the keyword and the score. I only need the keyword here.\n",
     "print(\"Grabbing all keywords from all dataframes...\")\n",
-    "# paper_keywords = [keyword[0] for row in papers_df[\"abstract_keywords\"] if row is not None for keyword in row if keyword]\n",
     "method_keywords = [keyword[0] for row in methods_df[\"description_keywords\"] if row is not None for keyword in row if keyword]\n",
     "dataset_keywords = [keyword[0] for row in datasets_df[\"description_keywords\"] if row is not None for keyword in row if keyword]\n",
     "task_keywords = [keyword[0] for row in tasks_df[\"description_keywords\"] if row is not None for keyword in row if keyword]\n",
@@ -161,21 +178,6 @@
     "# Put the id column in front\n",
     "keywords_df = keywords_df[['id', 'keyword']]\n",
     "print(f\"[NODES] Got {len(keywords_df)} rows in keywords_df\")\n",
-    "\n",
-    "# # Create edges between papers and keywords\n",
-    "# print(\"Creating edges between papers and keywords...\")\n",
-    "# papers_keywords_df = (papers_df[['id', 'abstract_keywords']]\n",
-    "#                       .rename(columns={'abstract_keywords': 'keywords'})\n",
-    "#                       .explode('keywords')\n",
-    "#                       .dropna()\n",
-    "#                       .assign(keyword=lambda df: df['keywords'].str[0], score=lambda df: df['keywords'].str[1])\n",
-    "#                       .drop(columns=['keywords'])\n",
-    "#                       .assign(keyword_id=lambda df: (\"keyword/\" + df['keyword']).apply(lambda x: str(int(hashlib.md5(x.encode('utf-8')).hexdigest(), 16))))\n",
-    "#                       .drop(columns=['keyword'])\n",
-    "#                       .rename(columns={'id': 'paper_id'})\n",
-    "#                       .reindex(columns=['paper_id', 'keyword_id', 'score'])\n",
-    "#                       .reset_index(drop=True))\n",
-    "# print(f\"[EDGES] Got {len(papers_keywords_df)} rows in papers_keywords_df\")\n",
     "\n",
     "# Create edges between methods and keywords\n",
     "print(\"Creating edges between methods and keywords...\")\n",
@@ -225,7 +227,8 @@
     "# Save the keywords and the papers_keywords_df to PWC_PROCESSED_JSON_PATH\n",
     "print(\"Saving keywords and the papers_keywords_df to PWC_PROCESSED_JSON_PATH...\")\n",
     "keywords_df.to_json(PWC_PROCESSED_JSON_PATH + \"keywords.json\", orient=\"records\")\n",
-    "papers_keywords_df.to_json(PWC_PROCESSED_JSON_PATH + \"papers_keywords.json\", orient=\"records\")\n",
+    "papers_title_keywords_df.to_json(PWC_PROCESSED_JSON_PATH + \"papers_title_keywords_df.json\", orient=\"records\")\n",
+    "papers_abstract_keywords_df.to_json(PWC_PROCESSED_JSON_PATH + \"papers_abstract_keywords_df.json\", orient=\"records\")\n",
     "methods_keywords_df.to_json(PWC_PROCESSED_JSON_PATH + \"methods_keywords.json\", orient=\"records\")\n",
     "datasets_keywords_df.to_json(PWC_PROCESSED_JSON_PATH + \"datasets_keywords.json\", orient=\"records\")\n",
     "tasks_keywords_df.to_json(PWC_PROCESSED_JSON_PATH + \"tasks_keywords.json\", orient=\"records\")\n",
@@ -234,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -254,12 +257,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "375d639655de4fdfa619587c7e72f8f7",
+       "model_id": "60416924bd504bf5a874e19d8575fdde",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Batches:   0%|          | 0/28635 [00:00<?, ?it/s]"
+       "Batches:   0%|          | 0/30357 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -371,25 +374,35 @@
     "tasks_areas_df[':START_ID'] = tasks_areas_df[':START_ID'].astype(str)\n",
     "tasks_areas_df[':END_ID'] = tasks_areas_df[':END_ID'].astype(str)\n",
     "tasks_areas_df[':TYPE'] = \"HAS_AREA\"\n",
-    "# papers_keywords_df\n",
-    "papers_keywords_df = papers_keywords_df.rename(columns={\"paper_id\": \":START_ID\", \"keyword_id\": \":END_ID\"})\n",
-    "papers_keywords_df[':START_ID'] = papers_keywords_df[':START_ID'].astype(str)\n",
-    "papers_keywords_df[':END_ID'] = papers_keywords_df[':END_ID'].astype(str)\n",
-    "papers_keywords_df[':TYPE'] = \"HAS_KEYWORD\"\n",
+    "# papers_title_keywords_df\n",
+    "papers_title_keywords_df = papers_title_keywords_df.rename(columns={\"paper_id\": \":START_ID\", \"keyword_id\": \":END_ID\"})\n",
+    "papers_title_keywords_df[':START_ID'] = papers_title_keywords_df[':START_ID'].astype(str)\n",
+    "papers_title_keywords_df[':END_ID'] = papers_title_keywords_df[':END_ID'].astype(str)\n",
+    "papers_title_keywords_df['source'] = \"title\"\n",
+    "papers_title_keywords_df[':TYPE'] = \"HAS_KEYWORD\"\n",
+    "# papers_abstract_keywords_df\n",
+    "papers_abstract_keywords_df = papers_abstract_keywords_df.rename(columns={\"paper_id\": \":START_ID\", \"keyword_id\": \":END_ID\"})\n",
+    "papers_abstract_keywords_df[':START_ID'] = papers_abstract_keywords_df[':START_ID'].astype(str)\n",
+    "papers_abstract_keywords_df[':END_ID'] = papers_abstract_keywords_df[':END_ID'].astype(str)\n",
+    "papers_abstract_keywords_df['source'] = \"abstract\"\n",
+    "papers_abstract_keywords_df[':TYPE'] = \"HAS_KEYWORD\"\n",
     "# methods_keywords_df\n",
     "methods_keywords_df = methods_keywords_df.rename(columns={\"method_id\": \":START_ID\", \"keyword_id\": \":END_ID\"})\n",
     "methods_keywords_df[':START_ID'] = methods_keywords_df[':START_ID'].astype(str)\n",
     "methods_keywords_df[':END_ID'] = methods_keywords_df[':END_ID'].astype(str)\n",
+    "methods_keywords_df['source'] = \"description\"\n",
     "methods_keywords_df[':TYPE'] = \"HAS_KEYWORD\"\n",
     "# datasets_keywords_df\n",
     "datasets_keywords_df = datasets_keywords_df.rename(columns={\"dataset_id\": \":START_ID\", \"keyword_id\": \":END_ID\"})\n",
     "datasets_keywords_df[':START_ID'] = datasets_keywords_df[':START_ID'].astype(str)\n",
     "datasets_keywords_df[':END_ID'] = datasets_keywords_df[':END_ID'].astype(str)\n",
+    "datasets_keywords_df['source'] = \"description\"\n",
     "datasets_keywords_df[':TYPE'] = \"HAS_KEYWORD\"\n",
     "# tasks_keywords_df\n",
     "tasks_keywords_df = tasks_keywords_df.rename(columns={\"task_id\": \":START_ID\", \"keyword_id\": \":END_ID\"})\n",
     "tasks_keywords_df[':START_ID'] = tasks_keywords_df[':START_ID'].astype(str)\n",
     "tasks_keywords_df[':END_ID'] = tasks_keywords_df[':END_ID'].astype(str)\n",
+    "tasks_keywords_df['source'] = \"description\"\n",
     "tasks_keywords_df[':TYPE'] = \"HAS_KEYWORD\"\n",
     "print(\"Done creating CSV importable files for neo4j!\")\n",
     "\n",
@@ -407,7 +420,8 @@
     "papers_repos_df.to_csv(NEO4J_PATH + \"papers_repos.csv\", index=False)\n",
     "tasks_areas_df.to_csv(NEO4J_PATH + \"tasks_areas.csv\", index=False)\n",
     "keywords_df.to_csv(NEO4J_PATH + \"keywords.csv\", index=False)\n",
-    "papers_keywords_df.to_csv(NEO4J_PATH + \"papers_keywords.csv\", index=False)\n",
+    "papers_title_keywords_df.to_csv(NEO4J_PATH + \"papers_title_keywords.csv\", index=False)\n",
+    "papers_abstract_keywords_df.to_csv(NEO4J_PATH + \"papers_abstract_keywords.csv\", index=False)\n",
     "methods_keywords_df.to_csv(NEO4J_PATH + \"methods_keywords.csv\", index=False)\n",
     "datasets_keywords_df.to_csv(NEO4J_PATH + \"datasets_keywords.csv\", index=False)\n",
     "tasks_keywords_df.to_csv(NEO4J_PATH + \"tasks_keywords.csv\", index=False)\n",
@@ -416,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +441,7 @@
       "\n",
       "=== COMMAND ===\n",
       "\n",
-      "bin/neo4j-admin database import full --nodes=import/authors.csv --nodes=import/institutions.csv --nodes=import/fulltexts.csv --nodes=import/papers.csv --nodes=import/methods.csv --nodes=import/repos.csv --nodes=import/areas.csv --nodes=import/tasks.csv --nodes=import/datasets.csv --nodes=import/keywords.csv --relationships=import/authors_papers.csv --relationships=import/authors_institutions.csv --relationships=import/papers_citations.csv --relationships=import/papers_fulltexts.csv --relationships=import/datasets_tasks.csv --relationships=import/papers_tasks.csv --relationships=import/papers_methods.csv --relationships=import/papers_repos.csv --relationships=import/tasks_areas.csv --relationships=import/papers_keywords.csv --relationships=import/methods_keywords.csv --relationships=import/datasets_keywords.csv --relationships=import/tasks_keywords.csv --multiline-fields --read-buffer-size=8000000 --skip-bad-relationships --bad-tolerance=100000000 --skip-duplicate-nodes --overwrite-destination neo4j\n",
+      "bin/neo4j-admin database import full --nodes=import/authors.csv --nodes=import/institutions.csv --nodes=import/fulltexts.csv --nodes=import/papers.csv --nodes=import/methods.csv --nodes=import/repos.csv --nodes=import/areas.csv --nodes=import/tasks.csv --nodes=import/datasets.csv --nodes=import/keywords.csv --relationships=import/authors_papers.csv --relationships=import/authors_institutions.csv --relationships=import/papers_citations.csv --relationships=import/papers_fulltexts.csv --relationships=import/datasets_tasks.csv --relationships=import/papers_tasks.csv --relationships=import/papers_methods.csv --relationships=import/papers_repos.csv --relationships=import/tasks_areas.csv --relationships=import/papers_keywords.csv --relationships=import/methods_keywords.csv --relationships=import/datasets_keywords.csv --relationships=import/tasks_keywords.csv --relationships=import/papers_title_keywords.csv --relationships=import/papers_abstract_keywords.csv --multiline-fields --read-buffer-size=8000000 --skip-bad-relationships --bad-tolerance=100000000 --skip-duplicate-nodes --overwrite-destination neo4j\n",
       "\n",
       "=== END COMMAND ===\n",
       "\n",
